--- a/picohisab-privacy.html
+++ b/picohisab-privacy.html
@@ -34,7 +34,7 @@
   <div class="container">
     <h1>Privacy Policy</h1>
     <p><strong>Effective Date:</strong> July 19, 2025</p>
-    <p><strong>Developer:</strong> Tuhin Hossain</p>
+    <p><strong>Developer:</strong> Md Moniruzzaman</p>
 
     <h2>1. Introduction</h2>
     <p>
@@ -79,7 +79,7 @@
     <h2>8. Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, feel free to contact us:</p>
     <ul>
-      <li><strong>Email:</strong> tuhin@example.com</li>
+      <li><strong>Email:</strong> picotechbd@gmail.com</li>
       <li><strong>App Name:</strong> PicoHisab</li>
     </ul>
 
